Fix Float Layout Problem

--- a/files/style/timeline.scss
+++ b/files/style/timeline.scss
@@ -118,6 +118,7 @@
 
       .timeline-text {
         margin-top: 10px;
+        overflow: hidden;
 
          img {
              max-width: 100%;
